Updated the package name

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:orientation="vertical"
         android:padding="24dp"
         android:weightSum="21"
-        tools:context=".MainActivity">
+        tools:context="com.simgesengun.guessnumber.com.simgesengun.guessnumber.MainActivity">
 
         <ImageView
             android:id="@+id/imageView"
